content/enterprise_kapacitor/v1.3/about-the-project/_index.md
---
title: About the Project
menu:
  enterprise_kapacitor_1_3:
    weight: 65
---

## [Release Notes/Changelog](/enterprise_kapacitor/v1.3/about-the-project/release-notes-changelog/)

## [Commercial License](https://www.influxdata.com/legal/slsa/)
Kapacitor Enterprise is available with a commercial license.  [Contact sales for more information](https://www.influxdata.com/contact-sales/).

## Third Party Software
InfluxData products contain third party software, which means the copyrighted, patented, or otherwise legally protected software of third parties, that is incorporated in InfluxData products.

Third party suppliers make no representation nor warranty with respect to such third party software or any portion thereof.
Third party suppliers assume no liability for any claim that might arise with respect to such third party software, nor for a
customer’s use of or inability to use the third party software.

In addition to [third party software incorporated in Kapacitor](http://docs.influxdata.com/kapacitor/v1.3/about_the_project/#third_party), Kapacitor Enterprise incorporates the following additional third party software:

| Third Party / Open Source Software - Description                                                                     | License Type                                                         |
| -------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------- |
| [Go supplementary cryptography libraries](https://github.com/golang/crypto/) (golang/crypto)                         | [BSD-3](https://github.com/golang/crypto/blob/master/LICENSE)        |
| [Go supplementary network libraries](https://github.com/golang/net/) (golang/net)                                    | [BSD-3](https://github.com/golang/net/blob/master/LICENSE)           |
| [Service orchestration and management tool](https://github.com/hashicorp/serf) (hashicorp/serf)                      | [Mozilla 2.0](https://github.com/hashicorp/serf/blob/master/LICENSE) |
| [gRPC Command line interface for any gRPC service in Go](https://github.com/nathanielc/grpccmd) (nathanielc/grpccmd) | [MIT](https://github.com/nathanielc/grpccmd/blob/master/LICENSE)     |
| [A Commander for modern Go CLI interactions](https://github.com/spf13/cobra) (spf13/cobra)                           | [Apache 2.0](https://github.com/spf13/cobra/blob/master/LICENSE.txt) |
| [The Go language implementation of gRPC. HTTP/2 based RPC](https://github.com/grpc/grpc-go/) (grpc/grpc-go)          | [Apache 2.0](https://github.com/grpc/grpc-go/blob/master/LICENSE)    |

***Thanks to the open source community for your contributions!***
